[modify] Update document
